--- a/deployment.yaml
+++ b/deployment.yaml
@@ -20,5 +20,8 @@ spec:
       containers:
       - image: nginx
         name: nginx
-        resources: {}
+        resources: 
+          limits:
+          memory: "200Mi"
+          cpu: "300m"
 status: {}
